# Quarter-3-python

./: 02_OpenRouter.ipynb  README.md
.devcontainer/: devcontainer.json
OpenAI-Agents-SDK/01-ai-agents-first/01-uv/uv-project2/: README.md  pyproject.toml
OpenAI-Agents-SDK/01-ai-agents-first/01-uv/uv-project2/src/uv_project2/: __init__.py
OpenAI-Agents-SDK/01-ai-agents-first/04-hello_agent/sync/hello_agent/: README.md  pyproject.toml
OpenAI-Agents-SDK/01-ai-agents-first/05-chainlit/: README.md  pyproject.toml
OpenAI-Agents-SDK/01-ai-agents-first/05-chainlit/src/05_chainlit/: __init__.py
OpenAI-Agents-SDK/01-uv-20-may/: main.py  pyproject.toml
OpenAI-Agents-SDK/02-shaitani-calculator/: README.md  main.py  pyproject.toml
OpenAI-Agents-SDK/02/00-cursor/01-calculator/calc_proj/: Calculator.py  main.py  pyproject.toml
OpenAI-Agents-SDK/02/00-cursor/01-calculator/calc_proj/src/calc_proj/: __init__.py
class-project-sirZia/Growth-Mindset-Challenge/: app.py  requirements.txt
class-project-sirZia/Password-Strength-Checker/: app.py
class-project-sirZia/Personal-Library-Manager/: app.py  library-cli.py  library.json  main.py  requirements.txt
class-project-sirZia/project-5/: main.py  requirements.txt  secure_data.json
class-project-sirZia/project-6/: 1.Usingself.ipynb  10.InstanceMethods.ipynb  11.ClassMethods.ipynb  12.StaticMethods.ipynb  13.Composition.ipynb  14.Aggregation.ipynb  15.MethodResolutionOrder(MRO)DiamondInheritance.ipynb  16.FunctionDecorators.ipynb  17.ClassDecorators.ipynb  18.PropertyDecorators.ipynb  19.callable&call.ipynb  2.Usingcls.ipynb  20.CustomException.ipynb  21.MakeCustomClassIterable.ipynb  3.PublicVariablesMethods.ipynb  4.ClassVariables&ClassMethods.ipynb  5.StaticVariables&StaticMethods.ipynb  6.Constructors&Destructors.ipynb  7.AccessModifiers.ipynb  8.TheSuper()Function.ipynb  9.AbstractClasses&Methods.ipynb
class-project-sirZia/unit-converter/: app.py
quiz-app/: main.py
ramzan-project/money-making-machine/: main.py
ramzan-project/mood-tracker/: main.py  mood_log.csv
ramzan-project/simple-api/: main.py
(+4783 files in other folders)
