[project]
name = "calc-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nida1khurram", email = "147607279+nida1khurram@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
calc-proj = "calc_proj:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
